--- a/views/cardComments.ejs
+++ b/views/cardComments.ejs
@@ -4,8 +4,7 @@
     <body>
         <%- include ('./nav') %>
         
-               <%- include ('./carousel') %>
-               <%- include ('./cards') %>
+               <%- include ('./cardPostComponent') %>
 
         <%- include ('./scripts') %>
         <%- include ('./footer') %>
