--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -7,14 +7,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-        <div class="nav-item nav-link" ><a href="#myModal" class="trigger-btn" data-toggle="modal"><button class="btn btn-primary">Signup or Login</button></a></div>
+        <div class="nav-item nav-link" ><a href="#LoginModal" class="trigger-btn" data-toggle="modal"><button class="btn btn-primary">Signup or Login</button></a></div>
         </div>
-    </div>
+	</div>
+	<a href="/cardComments">Temporary Link to cards</a>
 </nav>
 
 
-<!-- Modal HTML -->
-<div id="myModal" class="modal fade">
+<!-- Login Modal -->
+<div id="LoginModal" class="modal fade">
 	<div class="modal-dialog modal-login">
 		<div class="modal-content">
 			<form action="/examples/actions/confirmation.php" method="post">
@@ -33,11 +34,49 @@
 						</div>
 						<input type="password" class="form-control" required="required">
                      </div>
-                    <a href="#" class="float-right text-muted"><small>Already have an account?</small> <button class="btn-primary e-signup" >Signup</button></a>
+                    <a href="#" class="float-right text-muted"><small>Don't have an account?</small></a><a href="#myModal" class="trigger-btn" data-toggle="modal"><button class="btn btn-primary e-small-btn">SignUp</button></a>
                    
 				</div>
 				<div class="modal-footer justify-content-between">
 				   <input type="submit" class="btn btn-primary" value="Login" id="e-login-button">
+				</div>
+			</form>
+		</div>
+	</div>
+</div>  
+
+
+<!-- Signup Modal -->
+<div id="myModal" class="modal fade">
+	<div class="modal-dialog modal-login">
+		<div class="modal-content">
+			<form action="/examples/actions/confirmation.php" method="post">
+				<div class="modal-header">				
+					<h4 class="modal-title">SignUp</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				</div>
+				<div class="modal-body">				
+					<div class="form-group">
+						<label>Username</label>
+						<input type="text" class="form-control" required="required">
+					</div>
+					<div class="form-group">
+						<div class="clearfix">
+							<label>Password</label>
+						</div>
+						<input type="password" class="form-control" required="required">
+					 </div>
+					 <div class="form-group">
+						<div class="clearfix">
+							<label>Confirm password</label>
+						</div>
+						<input type="password" class="form-control" required="required">
+                     </div>
+                    <a href="#" class="float-right text-muted"><small>Already have an account?</small> </a><a href="#LoginModal" class="trigger-btn" data-toggle="modal"><button class="btn btn-primary e-small-btn">Login</button></a>
+                   
+				</div>
+				<div class="modal-footer justify-content-between">
+				   <input type="submit" class="btn btn-primary" value="SignUp" id="e-login-button">
 				</div>
 			</form>
 		</div>
