--- a/css/main.css
+++ b/css/main.css
@@ -107,126 +107,138 @@ body{
 	margin: 8em 8.7vw 8em 8.7vw;
 }
 
-/* seconf page styles*/
-.main-section{
-	width: 50%;
-	margin: 0 auto;
+/* second page styles*/
+.comments-details button.btn.dropdown-toggle,
+.comments-details .total-comments {
+    font-size: 18px;
+    font-weight: 500;
+    color: #5e5e5e;
 }
-.content{
-	padding:20px;
-	background-color: #fff;
+.comments-details {
+    padding: 15px 15px;
 }
-.user-img{
-	width:10%;
-	float:left;
-	margin-right: 20px;
+.comments .comments .dropdown,
+.comments .dropup {
+    position: relative;
 }
-.user-img img{
-	width:100%;
-	height:100%;
-	border-radius: 50%;
-	margin-top:-10px;
+.comments button {
+    background-color: transparent;
+    border: none;
 }
-.user-detail p{
-	font-size:17px;
-	font-weight:600;
-	letter-spacing:1.5px;
-	margin:15px 0px 10px 0px; 
+.comments .comment-box {
+    width: 100%;
+    float: left;
+    height: 100%;
+    background-color: #FAFAFA;
+    padding: 10px 10px 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
 }
-.user-detail span{
-	color:#a2a2a2;
+.comments .add-comment {
+    background-color: transparent;
+    border: none;
+    position: relative;
+    margin-bottom: 50px;
 }
-.comment-content{
-	margin-top:10px;
+.comments .commenter-pic {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    border-radius: 100%;
+    border: 2px solid #fff;
+    overflow: hidden;
+    background-color: #fff;
 }
-.comment-box{
-	margin-top:30px;
+.comments .add-comment .commenter-name {
+    width: 100%;
+    padding-left: 75px;
+    position: absolute;
+    top: 20px;
+    left: 0px;
 }
-.count-btn,.enter-btn{
-	float:left;
+.comments .add-comment input {
+    border-top: 0px;
+    border-bottom: 1px solid #ccc;
+    border-left: 0px;
+    border-right: 0px;
+    outline: 0px;
+    box-shadow: none;
+    border-radius: 0;
+    width: 100%;
+    padding: 0;
+    font-weight: normal;
 }
-.btn{
-	background-color: #fff;
-	border:none;
-	border:1px solid #c2c2c2;
-	padding:10px 12px;
-	border-radius:3px;
-	margin-right: 10px;
+.comments .add-comment input:focus {
+    border-color: #03a9f4;
+    border-width: 2px;
 }
-.btn:hover{
-	border:1px solid #000;
+.comments .add-comment button[type=submit] {
+    background-color: #03a9f4;
+    color: #fff;
+    margin-right: 0px;
 }
-.comment-btn{
-	margin-top: 30px;
+.comments .add-comment button {
+    background-color: #f5f5f5;
+    margin: 10px 5px;
+    font-size: 14px;
+    text-transform: uppercase;
+    float: right;
 }
-.comment-btn input{
-	width:80%;
-	padding:10px;
+.comments .commenter-name .comment-time {
+    font-weight: normal;
+    margin-left: 8px;
+    font-size: 15px;
 }
-.add-comment{
-	padding: 20px;
-	background-color:#F5F5F5;
-	border-top:1px solid #d2d2d2;
-	display: none;
+.comments p.comment-txt {
+    font-size: 15px;
+    border-bottom: 1px solid #ddd;
+    padding: 0px 0px 15px;
 }
-.add-comment-img{
-	width:10%;
+.comments .commenter-name {
+    display: inline-block;
+    position: relative;
+    top: -20px;
+    left: 10px;
+    font-size: 16px;
+    font-weight: bold;
 }
-.box .add-comment-img img{
-	margin-right:10px;
-	width:100%;
-	float:left;
-	height: 100%;
-	border-radius: 50%; 	
+.comments .comment-meta {
+    font-size: 14px;
+    color: #333;
+    padding: 2px 5px 0px;
+    line-height: 20px;
+    float: right;
 }
-.add-comment-text textarea{
-	width:80%;
-	font-family: 'Barlow Condensed', sans-serif;
-	padding:10px;
-	font-size:20px;
+.comments .reply-box {
+    display: none;
 }
-.post-comment-btn{
-	background-color: #5CB85C;
-	padding:8px;
-	border:none;
-	color:#fff;
-	border-radius:3px;
-	margin:10px 5px 0px 75px;
-}
-.cancel-btn{
-	background-color: #fff;
-	padding:8px;
-	border:none;
-	border:1px solid #d2d2d2;
-	border-radius:3px;
-}
-.cancel-btn:hover{
-	border:1px solid #000;
-	cursor:pointer;
-}
-.example img{
-	border-radius: 50%;
-	margin-top:20px;
-	width: 60px;
-}
-.comment-img img{
-	float:right;
-	margin-right:20px;
-}
-.comment p{
-	margin-top:30px;
-	display: inline-block;
-}
-
-.sub-comment .comment-img{
-	float: left;
-	width: 20%;
+.comments .replied {
+    background-color: #fff;
+    width: 95%;
+    float: right;
+    margin-top: 15px;
 }
 
-.sub-comment .comment{
-	float: left;
-	width: 80%;
+/*======Responsive CSS=======*/
+@media (max-width: 767px){
+.comments .commenter-name {
+    font-size: 13px;
+    top: -5px;
 }
+.comments .commenter-pic {
+    width: 40px;
+    height: 40px;
+}
+.comments .commenter-name a{
+  display: block;
+}
+.comments .commenter-name .comment-time{
+  display: block;
+  margin-left: 0px;
+}
+}
+
 /* footer styles */
 
 #e-footer {
