--- a/views/CommentPage.ejs
+++ b/views/CommentPage.ejs
@@ -3,9 +3,7 @@
     <%- include ('./head') %>
     <body>
         <%- include ('./nav') %>
-        
-               <%- include ('./cardPostComponent') %>
-
+                <%- include('./cardOnLogin')%>
         <%- include ('./scripts') %>
         <%- include ('./footer') %>
     </body>
