--- a/views/cardPostComponent.ejs
+++ b/views/cardPostComponent.ejs
@@ -1,76 +1,102 @@
-<div class="content">
-			<div class="top-section">
-				<div class="user-img">
-					<img src="http://nicesnippets.com/demo/man.png">
-				</div>
-				<div class="user-detail">
-					<p>Andrew Filander</p>
-					<span>Shared publicly - Jan 20 , 2018</span>
-				</div>
-				<div style="clear:both;"></div>			
-			</div>
-			<div class="comment-content">
-				<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore xcepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-			</div>
-
-			<div class="sub-comment"></div>
-			
-			<div class="comment-box box">
-				<div class="count-btn">
-					<button class="btn">+1</button>
-				</div>
-				<div class="enter-btn">
-					<button class="btn"><i class="fas fa-sign-out-alt"></i> </button>
-				</div>
-				<div style="clear:both;"></div>
-				<div class="comment-btn">
-					<input type="textarea" class="text" rows="10" cols="30" placeholder="Add a comment...">
-				</div>
-			</div>
-		</div>
-		<div class="add-comment">
-			<div class="box">
-				<div class="add-comment-img">
-					<img src="http://nicesnippets.com/demo/man03.png">
-				</div>
-				<div class="add-comment-text">
-					<textarea rows="5" class="example-textarea"></textarea>
-				</div>
-				<div style="clear:both;"></div>
-			</div>
-			<div class="add-comment-text-btn">
-				<button class="post-comment-btn">Post Comment</button>
-				<button class="cancel-btn">Cancel</button>
-			</div>
-		</div>
+<div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="comments">
+          <div class="comments-details">
+            <span class="total-comments comments-sort">117 Comments</span>
+            <span class="dropdown">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">Sort By <span class="caret"></span></button>
+                <div class="dropdown-menu">
+                  <a href="#" class="dropdown-item">Top Comments</a>
+                <a href="#" class="dropdown-item">Newest First</a>
+                </div>
+            </span>     
+          </div>
+          <div class="comment-box add-comment">
+            <span class="commenter-pic">
+              <img src="/images/user-icon.jpg" class="img-fluid">
+            </span>
+            <span class="commenter-name">
+              <input type="text" placeholder="Add a public comment" name="Add Comment">
+              <button type="submit" class="btn btn-default">Comment</button>
+              <button type="cancel" class="btn btn-default">Cancel</button>
+            </span>
+          </div>
+          <div class="comment-box">
+            <span class="commenter-pic">
+              <img src="/images/user-icon.jpg" class="img-fluid">
+            </span>
+            <span class="commenter-name">
+              <a href="#">Happy markuptag</a> <span class="comment-time">2 hours ago</span>
+            </span>       
+            <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+            <div class="comment-meta">
+              <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+              <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+              <button class="comment-reply reply-popup"><i class="fa fa-reply-all" aria-hidden="true"></i> Reply</button>         
+            </div>
+            <div class="comment-box add-comment reply-box">
+              <span class="commenter-pic">
+                <img src="/images/user-icon.jpg" class="img-fluid">
+              </span>
+              <span class="commenter-name">
+                <input type="text" placeholder="Add a public reply" name="Add Comment">
+                <button type="submit" class="btn btn-default">Reply</button>
+                <button type="cancel" class="btn btn-default reply-popup">Cancel</button>
+              </span>
+            </div>
+          </div>
+          <div class="comment-box">
+            <span class="commenter-pic">
+              <img src="/images/user-icon.jpg" class="img-fluid">
+            </span>
+            <span class="commenter-name">
+              <a href="#">Happy markuptag</a> <span class="comment-time">2 hours ago</span>
+            </span>       
+            <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+            <div class="comment-meta">
+              <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+              <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+              <button class="comment-reply"><i class="fa fa-reply-all" aria-hidden="true"></i> Reply</button>         
+            </div>
+            <div class="comment-box replied">
+              <span class="commenter-pic">
+                <img src="/images/user-icon.jpg" class="img-fluid">
+              </span>
+              <span class="commenter-name">
+                <a href="#">Happy markuptag</a> <span class="comment-time">2 hours ago</span>
+              </span>       
+              <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+              <div class="comment-meta">
+                <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+                <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+                <button class="comment-reply"><i class="fa fa-reply-all" aria-hidden="true"></i> Reply</button>         
+              </div>
+              <div class="comment-box replied">
+                <span class="commenter-pic">
+                  <img src="/images/user-icon.jpg" class="img-fluid">
+                </span>
+                <span class="commenter-name">
+                  <a href="#">Happy markuptag</a> <span class="comment-time">2 hours ago</span>
+                </span>       
+                <p class="comment-txt more">Suspendisse massa enim, condimentum sit amet maximus quis, pulvinar sit amet ante. Fusce eleifend dui mi, blandit vehicula orci iaculis ac.</p>
+                <div class="comment-meta">
+                  <button class="comment-like"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> 99</button>
+                  <button class="comment-dislike"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i> 149</button> 
+                  <button class="comment-reply"><i class="fa fa-reply-all" aria-hidden="true"></i> Reply</button>         
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-   <script>
-    $(".text").click(function(){
-        $(".text").hide();
-    }); 
-    
-    $(".cancel-btn").click(function(){
-        $(".text").show();
+  </div>
+<script>
+    // Reply box popup JS
+    $(document).ready(function(){
+      $(".reply-popup").click(function(){
+        $(".reply-box").toggle();
+      });
     });
-    
-    $('.text').click(function(){
-        $(".add-comment").slideToggle();
-    });
-    
-    $('.post-comment-btn').click(function(){ 
-        var data = $('.example-textarea').val();
-        if(!data){
-            alert("Plese Enter value after click button post comment..");
-        }else{
-            $('.example-textarea').val('');
-            $(".sub-comment").append('<div class="example"><div class="comment-img"><img src="http://nicesnippets.com/demo/man03.png" class="example"></div><div class="comment"><p>'+ data +'</p></div><div style="clear:both;"></div></div>');
-        }
-    });
-    
-    $(".cancel-btn").click(function(){
-        $(".add-comment").hide();
-    });
-
 </script>
