--- a/views/cards.ejs
+++ b/views/cards.ejs
@@ -4,7 +4,7 @@
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <button class="btn btn-primary">Login to comment</button>  
+      <a href="#LoginModal" class="trigger-btn" data-toggle="modal"><button class="btn btn-primary">Login to comment</button></a> 
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
