--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,10 +1,10 @@
-<!-- Login Modal -->
-<div id="LoginModal" class="modal fade">
+<!-- Signup Modal -->
+<div id="SignupModal" class="modal fade">
 	<div class="modal-dialog modal-login">
 		<div class="modal-content">
 			<form action="/examples/actions/confirmation.php" method="post">
 				<div class="modal-header">				
-					<h4 class="modal-title">Login</h4>
+					<h4 class="modal-title">SignUp</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
 				<div class="modal-body">				
@@ -17,13 +17,18 @@
 							<label>Password</label>
 						</div>
 						<input type="password" class="form-control" required="required">
+					 </div>
+					 <div class="form-group">
+						<div class="clearfix">
+							<label>Confirm password</label>
+						</div>
+						<input type="password" class="form-control" required="required">
                      </div>
                    </div>
 				<div class="modal-footer justify-content-between">
-				   <input type="submit" class="btn btn-primary" value="Login" id="e-login-button">
+				   <input type="submit" class="btn btn-primary" value="SignUp" id="e-login-button">
 				</div>
 			</form>
 		</div>
 	</div>
 </div>  
-
