--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -18,7 +18,7 @@
 <div id="LoginModal" class="modal fade">
 	<div class="modal-dialog modal-login">
 		<div class="modal-content">
-			<form action="/examples/actions/confirmation.php" method="post">
+			<form>
 				<div class="modal-header">				
 					<h4 class="modal-title">Login</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -47,7 +47,7 @@
 <div id="SignupModal" class="modal fade">
 	<div class="modal-dialog modal-login">
 		<div class="modal-content">
-			<form action="/examples/actions/confirmation.php" method="post">
+			<form>
 				<div class="modal-header">				
 					<h4 class="modal-title">SignUp</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
